--- a/app/views/inventories/edit.html.erb
+++ b/app/views/inventories/edit.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: 'form', locals: { action_text: 'Edit Inventory' } %>
+<%= render partial: 'form', locals: { action_text: 'Edit' } %>
