--- a/app/views/inventories/new.html.erb
+++ b/app/views/inventories/new.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: 'form', locals: { action_text: 'Create Inventory' } %>
+<%= render partial: 'form', locals: { action_text: 'Create' } %>
